--- a/css/profile.css
+++ b/css/profile.css
@@ -30,7 +30,7 @@
     max-height: 100%;
 }
 .image-fill img{
-    min-width: 100%;
+    max-width: 100%;
     max-height: 300px;
     border-radius: 10px;
     overflow: hidden;
