--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -51,6 +51,10 @@
 }
 /* min-lapstop */
 @media screen and (min-width:900px){
+    .leader{
+        width: 320px;  
+        margin: 16px;     
+    }
     .header-wrapper{
         max-height: 95%;
         padding-bottom: 20px;
